--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
       display: none;
     }
     #content {
+      margin: 0 auto;
       margin-top: 80px;
+      max-width: 1200px;
     }
     .conversation-wrap {
       box-shadow: -2px 0 3px #ddd;
@@ -59,31 +61,10 @@
       border-bottom-left-radius: 0;
       border-bottom-right-radius: 0;
     }
-    .btn-panel {
-      background: #f7f7f9;
-      height: 34px;
-    }
-    .btn-panel .btn {
-      background: gold;
-      color:#999;
-      transition: 0.2s all ease-in-out;
-    }
-    .btn-panel .btn:hover {
-      color:#000;
-    }
-    .btn-panel .btn:active {
-      background: #f8f8f8;
-      box-shadow: 0 0 1px #ddd;
-    }
-    .btn-panel-conversation .btn,.btn-panel-msg .btn {
-      background: #f8f8f8;
-    }
-    .btn-panel-conversation .btn:first-child {
-      border-right: 1px solid #ddd;
-    }
-    .msg-wrap .media-heading {
+    .media-heading {
       color:#003bb3;
       font-weight: 700;
+      padding-bottom: 8px;
     }
     .msg-date {
       background: none;
@@ -108,7 +89,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">柯P政策你來批</a>
+      <a class="navbar-brand" href="index.html">柯P政策你來批</a>
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
@@ -120,25 +101,59 @@
         </li>
       </ul>
       <form class="navbar-form navbar-right hide">
-        <button type="button" class="btn btn-default">公民登入</button>
+        <button type="button" class="btn btn-default">市民登入</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="http://kptaipei.tw" target="_blank">柯文哲官方網站</a></li>
-        <li><a href="http:/unlimited.kptaipei.tw" target="_blank">野生官網</a></li>
+        <li><a href="http://unlimited.kptaipei.tw" target="_blank">野生官網</a></li>
+
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">更多應用 <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a target="_blank" href="https://unlimited-kp.appspot.com/">MA柯P</a></li>
+            <li><a target="_blank" href="http://lab.andretw.com/kp/">柯P挑戰</a></li>
+            <li><a target="_blank" href="http://kpgotyo.herokuapp.com">KP Got Yo!  KP嘎油!</a></li>
+            <li><a target="_blank" href="http://goooooooogle.github.io/kp/">柯 P 滑出來對你說政見 Plugin</a></li>
+            <li><a target="_blank" href="http://kp-policy-speech.herokuapp.com/">柯P政策導讀</a></li>
+            <li><a target="_blank" href="http://brianhsu.moe/KPWild/">柯文哲野生官網 BrianHsu.moe 分站</a></li>
+            <li><a target="_blank" href="http://minipai.github.io/kp-reader/">柯P新政閱讀器</a></li>
+            <li><a target="_blank" href="http://kp-is-everywhere.github.io/">柯文哲關鍵字小幫手</a></li>
+            <li class="divider"></li>
+            <li><a target="_blank" href="https://www.facebook.com/groups/unlimited.kptaipei.tw/">柯文哲 API 使用討論區</a></li>
+          </ul>
+        </li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-<div id="content" class="row col-lg-12">
+<div id="content" class="row">
   <div id="main" class="col-md-7" style="border-right:1px solid #ccc"></div>
   <div id="comments" class="col-md-5">
     <div id="commentBox">
-      <div class="form-group"><input type="text" class="form-control" id="yourname" placeholder="您的姓名"></div><div class="send-wrap "><textarea id="message" class="form-control send-message" rows="3" placeholder="請留下您對於此則政策的批評與建議"></textarea></div><div class="btn-panel"><button id="submit" class="col-lg-4 text-right btn send-message-btn pull-right"><i class="fa fa-plus"></i>我批！</button></div>
+      <div class="form-group">
+        <input type="text" class="form-control" id="yourname" placeholder="您的姓名">
+      </div>
+      <div class="send-wrap">
+        <textarea id="message" class="form-control send-message" rows="3" placeholder="請留下您對於此則政見的評語"></textarea>
+      </div>
+      <div class="form-group">
+        <label>您對這則政見的評價是：</label>
+        <div class="btn-group">
+          <button type="button" class="btn btn-default vote" value="0">爛政見</button>
+          <button type="button" class="btn btn-default vote" value="1">不妥</button>
+          <button type="button" class="btn btn-default vote active" value="2">已讀</button>
+          <button type="button" class="btn btn-default vote" value="3">適妥</button>
+          <button type="button" class="btn btn-default vote" value="4">好政見</button>
+        </div>
+      </div>
+        <button type="submit" class="btn btn-info btn-block" id="submit">留下評語</button>
     </div>
-    <div id="commentList"></div>
+    <hr>
+    <div id="commentList">資料讀取中...</div>
   </div>
 </div>
 <input type="hidden" id="articleID" value="">
+<input type="hidden" id="voteStar" value="2">
 <script src="//code.jquery.com/jquery-1.11.1.min.js" type="text/javascript"></script>
 <script src='https://cdn.firebase.com/js/client/1.0.17/firebase.js'></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js" type="text/javascript"></script>
@@ -154,6 +169,12 @@ $(function(){
     var id = $(this).find('input').val();
     loadArticle(api,id,database);
     $('#topNav').parent().removeClass('open');
+  });
+  $('.vote').click(function(){
+    var val = $(this).val();
+    $('.vote').removeClass('active');
+    $(this).addClass('active');
+    $('#voteStar').val(val);
   });
   $('#submit').click(function(){
     var target = $('#articleID').val();
@@ -183,11 +204,12 @@ function loadNav(apiKey){
   });
 }
 function readComment(database,target) {
+  var vote = ['爛政見','不妥','已讀','適妥','好政見'];
   database.child(target).on('value',function(response) {
     $('#commentList').html('');
     $.each(response.val(),function(ind,item){
       $.each(item,function(ind,comment){
-        data = '<div class="media msg"><a class="pull-left" href="#"><img class="media-object" src="http://placehold.it/48x48"></a><div class="media-body"><small class="pull-right time"><i class="fa fa-clock-o"></i> '+comment.time+'</small><h5 class="media-heading">'+comment.name+'</h5><small class="col-lg-10">'+comment.message+'</small></div></div>';
+        var data = '<div class="media msg"><a class="pull-left"><img class="media-object" src="http://www.ie.edu/university/img/ie-way-profile-default.gif" style="width:48px; height:48px;"></a><div class="media-body"><small class="pull-right time"><i class="fa fa-clock-o"></i> '+(new Date(comment.time)).toString().substr(0,21)+' &nbsp; <span class="badge">'+vote[comment.vote]+'</span></small><h5 class="media-heading">'+comment.name+'</h5><small class="col-lg-10">'+comment.message+'</small></div></div>';
         $('#commentList').prepend(data);
       });
     });
@@ -196,14 +218,34 @@ function readComment(database,target) {
 function writeComment(database,target) {
   var time = new Date().getTime(),
       name = $('#yourname').val(),
-      message = $('#message').val();
-  var vote = Math.floor(Math.random()*4)+1; // test only
+      message = $('#message').val(),
+      vote = $('#voteStar').val();
   database.child(target).child('message'+time).push({
     name: name,
     message: message,
     time: time,
     vote: vote
   });
+}
+Date.prototype.customFormat = function(formatString){
+  var YYYY,YY,MMMM,MMM,MM,M,DDDD,DDD,DD,D,hhh,hh,h,mm,m,ss,s,ampm,AMPM,dMod,th;
+  var dateObject = this;
+  YY = ((YYYY=dateObject.getFullYear())+"").slice(-2);
+  MM = (M=dateObject.getMonth()+1)<10?('0'+M):M;
+  MMM = (MMMM=["January","February","March","April","May","June","July","August","September","October","November","December"][M-1]).substring(0,3);
+  DD = (D=dateObject.getDate())<10?('0'+D):D;
+  DDD = (DDDD=["Sunday","Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"][dateObject.getDay()]).substring(0,3);
+  th=(D>=10&&D<=20)?'th':((dMod=D%10)==1)?'st':(dMod==2)?'nd':(dMod==3)?'rd':'th';
+  formatString = formatString.replace("#YYYY#",YYYY).replace("#YY#",YY).replace("#MMMM#",MMMM).replace("#MMM#",MMM).replace("#MM#",MM).replace("#M#",M).replace("#DDDD#",DDDD).replace("#DDD#",DDD).replace("#DD#",DD).replace("#D#",D).replace("#th#",th);
+
+  h=(hhh=dateObject.getHours());
+  if (h==0) h=24;
+  if (h>12) h-=12;
+  hh = h<10?('0'+h):h;
+  AMPM=(ampm=hhh<12?'am':'pm').toUpperCase();
+  mm=(m=dateObject.getMinutes())<10?('0'+m):m;
+  ss=(s=dateObject.getSeconds())<10?('0'+s):s;
+  return formatString.replace("#hhh#",hhh).replace("#hh#",hh).replace("#h#",h).replace("#mm#",mm).replace("#m#",m).replace("#ss#",ss).replace("#s#",s).replace("#ampm#",ampm).replace("#AMPM#",AMPM);
 }
 </script>
 </body>
