--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <title>柯P政策你來批</title>
   <meta content="柯P政策你來批" property="og:title">
   <meta content="柯P政策你來批" property="og:site_name">
-  <meta content="http://goooooooogle.github.io/pkp/img/fb.png" property="og:image">
-  <meta content="" property="og:description">
+  <meta content="http://jiten.go-kanken.com/kanjib/972.gif" property="og:image">
+  <meta content="康聖人連聲誇獎說：文章奇哉，文章妙哉，文章奇妙而絕哉！" property="og:description">
   <meta content="website" property="og:type">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   <style>
