--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
   <meta charset="UTF-8" />
-  <title>柯P政策你來批</title>
-  <meta content="柯P政策你來批" property="og:title">
-  <meta content="柯P政策你來批" property="og:site_name">
+  <title>柯P政策你來批 (beta)</title>
+  <meta content="柯P政策你來批 (beta)" property="og:title">
+  <meta content="柯P政策你來批 (beta)" property="og:site_name">
   <meta content="http://jiten.go-kanken.com/kanjib/972.gif" property="og:image">
   <meta content="康聖人連聲誇獎說：文章奇哉，文章妙哉，文章奇妙而絕哉！" property="og:description">
   <meta content="website" property="og:type">
@@ -99,7 +99,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">柯P政策你來批</a>
+      <a class="navbar-brand" href="index.html">柯P政策你來批 (beta)</a>
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
@@ -140,7 +140,7 @@
   <div id="main" class="col-md-7" style="border-right:1px solid #ccc"></div>
   <div id="comments" class="col-md-5">
     <div id="commentBox">
-      <h3>留下評語</h3>
+      <h3>留下評語 <small><a href="https://www.facebook.com/groups/unlimited.kptaipei.tw/permalink/364680450364644/" target="_blank">(Bug回報)</a></small></h3>
       <div class="row">
         <div class="col-sm-6">
           <div class="form-group">
@@ -264,6 +264,7 @@ function writeComment(database,target) {
     $('#message').focus();
   }
   else {
+    $('#commentList').html('');
     database.child(target).child('message'+time).push({
       name: name,
       identity: identity,
