--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta content="http://jiten.go-kanken.com/kanjib/972.gif" property="og:image">
   <meta content="康聖人連聲誇獎說：文章奇哉，文章妙哉，文章奇妙而絕哉！" property="og:description">
   <meta content="website" property="og:type">
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   <style>
     .hide {
       display: none;
@@ -140,56 +140,59 @@
   <div id="main" class="col-md-7" style="border-right:1px solid #ccc"></div>
   <div id="comments" class="col-md-5">
     <div id="commentBox">
-      <h3>留下評語 <small><a href="https://www.facebook.com/groups/unlimited.kptaipei.tw/permalink/364680450364644/" target="_blank">(Bug回報)</a></small></h3>
-      <div class="row">
-        <div class="col-sm-6">
-          <div class="form-group">
-            <input type="text" class="form-control" id="yourname" placeholder="您的姓名">
+      <form id="optionForm">
+        <h3>留下評語 <small><a href="https://www.facebook.com/groups/unlimited.kptaipei.tw/permalink/364680450364644/" target="_blank">(Bug回報)</a></small></h3>
+        <div class="row">
+          <div class="col-sm-6">
+            <div class="form-group">
+              <input type="text" class="form-control" id="yourname" placeholder="您的姓名">
+            </div>
+          </div>
+          <div class="col-sm-6">
+            <select class="form-control" id="identity">
+              <option value="">--- 身分選擇 ---</option>
+              <option value="0">天龍人</option>
+              <option value="1">邊陲地區人民</option>
+              <option value="2">鄉下人</option>
+              <option value="3">非人物種</option>
+              <option value="4">高級外省人</option>
+              <option value="5">昴宿星人</option>
+              <option value="6">路人甲</option>
+              <option value="7">黨工</option>
+              <option value="8">網軍</option>
+              <option value="9">NPC</option>
+            </select>
           </div>
         </div>
-        <div class="col-sm-6">
-          <select class="form-control" id="identity">
-            <option value="">--- 身分選擇 ---</option>
-            <option value="0">天龍人</option>
-            <option value="1">邊陲地區人民</option>
-            <option value="2">鄉下人</option>
-            <option value="3">非人物種</option>
-            <option value="4">高級外省人</option>
-            <option value="5">昴宿星人</option>
-            <option value="6">路人甲</option>
-            <option value="7">黨工</option>
-            <option value="8">網軍</option>
-            <option value="9">NPC</option>
-          </select>
+        <div class="send-wrap">
+          <textarea id="message" class="form-control send-message" rows="3" placeholder="請留下您對於此則政見的評語"></textarea>
         </div>
-      </div>
-      <div class="send-wrap">
-        <textarea id="message" class="form-control send-message" rows="3" placeholder="請留下您對於此則政見的評語"></textarea>
-      </div>
-      <div class="form-group">
-        <label>您對這則政見的評價是：</label>
-        <div class="btn-group">
-          <button type="button" class="btn btn-default vote" value="0">爛政見</button>
-          <button type="button" class="btn btn-default vote" value="1">不妥</button>
-          <button type="button" class="btn btn-default vote active" value="2">已讀</button>
-          <button type="button" class="btn btn-default vote" value="3">適妥</button>
-          <button type="button" class="btn btn-default vote" value="4">好政見</button>
+        <div class="form-group">
+          <label>您對這則政見的評價是：</label>
+          <div class="btn-group">
+            <button type="button" class="btn btn-default vote" value="0">爛政見</button>
+            <button type="button" class="btn btn-default vote" value="1">不妥</button>
+            <button type="button" class="btn btn-default vote active" value="2">已讀</button>
+            <button type="button" class="btn btn-default vote" value="3">適妥</button>
+            <button type="button" class="btn btn-default vote" value="4">好政見</button>
+          </div>
         </div>
+          <button type="submit" class="btn btn-info btn-block" id="submit">留下評語</button>
       </div>
-        <button type="submit" class="btn btn-info btn-block" id="submit">留下評語</button>
-    </div>
+    </form>
     <hr>
     <div id="commentList">資料讀取中...</div>
   </div>
 </div>
 <input type="hidden" id="articleID" value="">
 <input type="hidden" id="voteStar" value="2">
-<script src="//code.jquery.com/jquery-1.11.1.min.js" type="text/javascript"></script>
+<script src="http://code.jquery.com/jquery-1.11.1.min.js" type="text/javascript"></script>
 <script src='https://cdn.firebase.com/js/client/1.0.17/firebase.js'></script>
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js" type="text/javascript"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js" type="text/javascript"></script>
 <script>
 var api = 'kp53f568e77303e9.28212837',
-    database = new Firebase('https://p-kp.firebaseio.com');
+    database = new Firebase('https://p-kp.firebaseio.com/test'),
+    post = null;
 $(function(){
   loadArticle(api,3233,database);
   loadNav(api);
@@ -212,6 +215,7 @@ $(function(){
   });
 });
 function loadArticle(apiKey,targetID,database){
+  post = targetID;
   $.get('http://api.kptaipei.tw/v1/category/40?accessToken='+apiKey,function(result){
     $.each(result.data,function(ind,item){
       if(item.id==targetID) {
@@ -237,9 +241,15 @@ function readComment(database,target) {
   var vote = ['爛政見','不妥','已讀','適妥','好政見'];
   var identity = ['天龍人','邊陲地區人民','鄉下人','非人物種','高級外省人','昴宿星人','路人甲','黨工','網軍','NPC'];
   database.child(target).on('value',function(response) {
+
+    if(target != post){
+      return false;
+    }
+    console.log(response.val());
     $('#commentList').html('');
     if(response.val()==null) $('#commentList').html('尚無評論');
     $.each(response.val(),function(ind,item){
+      var out = [];
       $.each(item,function(ind,comment){
         var data = '<div class="media msg"><a class="pull-left"><img class="media-object" src="http://www.ie.edu/university/img/ie-way-profile-default.gif" style="width:48px; height:48px;"></a><div class="media-body"><small class="pull-right time"><i class="fa fa-clock-o"></i> '+(new Date(comment.time)).toString().substr(0,21)+' &nbsp; <span class="badge">'+vote[comment.vote]+'</span></small><h5 class="media-heading">'+comment.name+' ('+identity[comment.identity]+')</h5><small class="col-lg-10">'+comment.message+'</small></div></div>';
         $('#commentList').prepend(data);
@@ -272,6 +282,10 @@ function writeComment(database,target) {
       time: time,
       vote: vote
     });
+    $("#optionForm").submit(function(){
+      return false;
+    });
+    $("#optionForm")[0].reset();
   }
 }
 function strip(html) {
