--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js" type="text/javascript"></script>
 <script>
 var api = 'kp53f568e77303e9.28212837',
-    database = new Firebase('https://p-kp.firebaseio.com/test'),
+    database = new Firebase('https://p-kp.firebaseio.com/'),
     post = null;
 $(function(){
   loadArticle(api,3233,database);
